Updated all the API endpoints.
