# server/src/main/java/za/dots/controllers/interfaces/RoomApi.java
@@ -1,21 +1,101 @@
 package za.dots.controllers.interfaces;
 
+import za.dots.models.PlayerLine;
 import za.dots.models.Room;
 
 import java.util.List;
 public interface RoomApi {
+    // create a room
+    // response 200: Room created successfully (Room)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 409: Conflict
+    // request mapping: /room
+    // query: creatorUsername (String: Username of the creator)
+    // query: roomName (String: Game room name)
+    // POST request
+    Room createRoom(String creatorUsername, String roomName);
 
-    Room createRoom(String creatorUsername, String sessionId);
+    // delete a room
+    // response 200: Room deleted successfully (Room)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 404: Player or room not found
+    // request mapping: /room/{roomId}/delete/{username}
+    // path: roomId (String: ID of the room to delete)
+    // path: username (String: username of the player deleting the room)
+    // DELETE request
+    Room deleteRoomById(String roomId, String username);
 
-    Room deleteRoomById(String roomId, String username, String sessionId);
-
+    // Get room by ID
+    // response 200: Successfully retrieved the room (Room)
+    // response 400: Invalid request
+    // response 500: Internal server error
+    // response 404: Room not found
+    // request mapping: /room/{roomId}
+    // path: roomId (String: ID of the room)
+    // GET request
     Room getRoomById(String roomId);
 
+    // get all rooms
+    // response 200: Successfully retrieved all rooms (List<Room>)
+    // response 400: Invalid request
+    // response 500: Internal server error
+    // request mapping: /room
+    // GET request
     List<Room> getRooms();
 
-    Room joinRoom(String roomId, String username, String sessionId);
+    // join a room
+    // response 200: Successfully joined the room (Room)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 404: Player or room not found
+    // response 409: Conflict
+    // request mapping: /room/{roomId}/join/{username}
+    // path: roomId (String: ID of the room to join)
+    // path: username (String: username of the player joining the room)
+    // POST request
+    Room joinRoom(String roomId, String username);
 
-    Room leaveRoom(String roomId, String username, String sessionId);
+    // leave a room
+    // response 200: Successfully left the room (Room)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 404: Player or room not found
+    // response 409: Conflict
+    // request mapping: /room/{roomId}/leave/{username}
+    // path: roomId (String: ID of the room to leave)
+    // path: username (String: username of the player leaving the room)
+    // POST request
+    Room leaveRoom(String roomId, String username);
 
-    Void startRoom(String roomId, String username, String sessionId);
+    // send the game state
+    // response 200: Game state successfully received (String)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 404: Player or room not found
+    // request mapping: /room/{roomId}/sendPlayerLine/{username}
+    // path: roomId (String: ID of the room)
+    // path: username (String: username of the player playing the game)
+    // body: playerLine (PlayerLine: the line the player has played)
+    // POST request
+    String sendGameState(String roomId, String username, PlayerLine playerLine);
+
+    // start a room
+    // response 200: Room started successfully (Room)
+    // response 400: Invalid request
+    // response 401: Unauthorized
+    // response 500: Internal server error
+    // response 404: Player or room not found
+    // request mapping: /room/{roomId}/start/{username}
+    // path: roomId (String: ID of the room to start)
+    // path: username (String: username of the player starting the game)
+    // query: gridSize (Integer: Size of the grid)
+    // GET request
+    Room startRoom(String roomId, String username, Integer gridSize);
 }
